# archlinux-installation

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: github_pages.yml
docs/installation/: configuration.md  installation.md  preinstallation.md  reboot.md
docs/postinstallation/: adminsys.md  boot.md  gui.md  optimization.md  services.md
installation/configuration/: index.html
installation/installation/: index.html
installation/preinstallation/: index.html
installation/reboot/: index.html
postinstallation/adminsys/: index.html
postinstallation/boot/: index.html
postinstallation/gui/: index.html
postinstallation/optimization/: index.html
postinstallation/services/: index.html
search/: search_index.json
