[tool.poetry]
name = "archlinux-installation"
version = "0.1.0"
description = ""
authors = ["Vivien Maisonneuve"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^8.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
